<?xml version="1.0"?>
<package format="2">
  <name>adr_bringup</name>
  <version>1.2.5</version>
  <description>
    roslaunch scripts for starting the adr
  </description>
  <license>Apache 2.0</license>
  <author email="muvahhidkilic@hotmail.com">Muvahhid Kılıç</author>
  <maintainer email="muvahhidkilic@hotmail.com">Muvahhid Kılıç</maintainer>
  <!-- <url type="website">http://wiki.ros.org/turtlebot3</url> -->
  <!-- <url type="emanual">http://turtlebot3.robotis.com</url> -->
  <url type="repository">https://github.com/ExpectedArgument/AutonomousDeliveryRobot</url>
  <url type="bugtracker">https://github.com/ExpectedArgument/AutonomousDeliveryRobot/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>adr_msgs</depend>
  <exec_depend>adr_description</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>hls_lfcd_lds_driver</exec_depend>
  <!-- <exec_depend>realsense_camera</exec_depend> for TurtleBot3 Waffle using Intel RealSense Camera -->
  <!-- <exec_depend>raspicam_node</exec_depend> for TurtleBot3 Waffle Pi using Raspberry Pi Camera -->
</package>
