<?xml version="1.0"?>
<package format="2">
  <name>adr_gazebo</name>
  <version>1.3.2</version>
  <description>
    Gazebo simulation package for the adr
  </description>
  <license>Apache 2.0</license>
  <author email="muvahhidkilic@hotmail.com">Muvahhid Kılıç</author>
  <maintainer email="muvahhidkilic@hotmail.com">Muvahhid Kılıç</maintainer>
  <!-- <url type="website">http://wiki.ros.org/turtlebot3</url> -->
  <!-- <url type="emanual">http://turtlebot3.robotis.com</url> -->
  <url type="repository">https://github.com/ExpectedArgument/AutonomousDeliveryRobot</url>
  <url type="bugtracker">https://github.com/ExpectedArgument/AutonomousDeliveryRobot/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>adr_description</exec_depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>