<?xml version="1.0"?>
<package format="2">
  <name>adr_navigation</name>
  <version>1.3.2</version>
  <description>
    Provides roslaunch scripts for starting the navigation of adr
  </description>
  <license>Apache 2.0</license>
  <author email="muvahhidkilic@hotmail.com">Muvahhid Kılıç</author>
  <maintainer email="muvahhidkilic@hotmail.com">Muvahhid Kılıç</maintainer>
  <!-- <url type="website">http://wiki.ros.org/turtlebot3</url> -->
  <!-- <url type="emanual">http://turtlebot3.robotis.com</url> -->
  <url type="repository">https://github.com/ExpectedArgument/AutonomousDeliveryRobot</url>
  <url type="bugtracker">https://github.com/ExpectedArgument/AutonomousDeliveryRobot/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
</package>