<?xml version="1.0"?>
<package format="2">
  <name>adr_slam</name>
  <version>1.2.5</version>
  <description>
    The adr_slam package provides roslaunch scripts for starting the SLAM
  </description>
  <license>Apache 2.0</license>
  <author email="muvahhidkilic@hotmail.com">Muvahhid Kılıç</author>
  <maintainer email="muvahhidkilic@hotmail.com">Muvahhid Kılıç</maintainer>
  <!-- <url type="website">http://wiki.ros.org/turtlebot3</url> -->
  <!-- <url type="emanual">http://turtlebot3.robotis.com</url> -->
  <url type="repository">https://github.com/ExpectedArgument/AutonomousDeliveryRobot</url>
  <url type="bugtracker">https://github.com/ExpectedArgument/AutonomousDeliveryRobot/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
</package>
